add foot tab for update peristiwa

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.1.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.2",
+    "react-native-camera": "^0.7.0",
     "react-native-gifted-listview": "0.0.15",
     "react-native-gridview": "^0.1.1",
     "react-native-loading-spinner-overlay": "^0.4.4",
